// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TimelineItem > slots > children 1`] = `
<div>
  <li
    class="t-timeline-item t-timeline-item-left"
  >
    <div
      class="t-timeline-item__wrapper"
    >
      <div
        class="t-timeline-item__dot t-timeline-item__dot--primary"
      />
      <div
        class="t-timeline-item__tail t-timeline-item__tail--theme-default"
      />
    </div>
    <div
      class="t-timeline-item__content"
    >
      <span
        class="custom-node"
      >
        TNode
      </span>
    </div>
  </li>
</div>
`;

exports[`TimelineItem > slots > content 1`] = `
<div>
  <li
    class="t-timeline-item t-timeline-item-left"
  >
    <div
      class="t-timeline-item__wrapper"
    >
      <div
        class="t-timeline-item__dot t-timeline-item__dot--primary"
      />
      <div
        class="t-timeline-item__tail t-timeline-item__tail--theme-default"
      />
    </div>
    <div
      class="t-timeline-item__content"
    >
      <span
        class="custom-node"
      >
        TNode
      </span>
    </div>
  </li>
</div>
`;

exports[`TimelineItem > slots > label 1`] = `
<div>
  <li
    class="t-timeline-item t-timeline-item-left"
  >
    <div
      class="t-timeline-item__label t-timeline-item__label--alternate"
    >
      <span
        class="custom-node"
      >
        TNode
      </span>
    </div>
    <div
      class="t-timeline-item__wrapper"
    >
      <div
        class="t-timeline-item__dot t-timeline-item__dot--primary"
      />
      <div
        class="t-timeline-item__tail t-timeline-item__tail--theme-default"
      />
    </div>
    <div
      class="t-timeline-item__content"
    />
  </li>
</div>
`;
